<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/fancy_white"
                                             android:orientation="vertical">

    <TextView
        android:id="@+id/textView2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/init_layout_text2"
        android:textColor="@color/fancy_dark_black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3_2"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/textView3_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/init_layout_title"
        android:textColor="@color/fancy_orange"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <!--<TextView-->
        <!--android:id="@+id/tv_seafile_f_IniAct"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="7dp"-->
        <!--android:layout_marginLeft="32dp"-->
        <!--android:layout_marginRight="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:text="Seafie 类型 ："-->
        <!--android:textSize="14sp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/tv_seafile_v_IniAct"-->
        <!--app:layout_constraintVertical_bias="0.0"/>-->

    <TextView
        android:id="@+id/tv_seafile_v_IniAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2_2"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/bt_checkAccount_InitVP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@color/fancy_orange"
        android:text="@string/init_layout_btn2"
        android:textColor="@color/fancy_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_account_InitAct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_checkAccount_InitVP"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_seafile_v_IniAct"
        app:layout_constraintVertical_bias="0.20999998"
        app:layout_constraintHorizontal_bias="0.0">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/init_layout_text6"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:text="@string/init_demo_account"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_pw_InitAct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_checkAccount_InitVP"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_account_InitAct"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/init_layout_text7"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text="@string/init_demo_pw"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_checkAcRes_InitAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/bt_checkAccount_InitVP"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/til_pw_InitAct"
        app:layout_constraintRight_toRightOf="@+id/til_pw_InitAct"
        app:layout_constraintTop_toBottomOf="@+id/til_pw_InitAct"
        app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>